--- a/TuyaAPI/packages.config
+++ b/TuyaAPI/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="M2Mqtt" version="4.3.0.0" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net472" />
   <package id="RestSharp" version="106.11.7" targetFramework="net461" />
   <package id="System.Security.Principal.Windows" version="5.0.0" targetFramework="net461" />
 </packages>
